--- a/distro/effects.config
+++ b/distro/effects.config
@@ -1,34 +1,323 @@
-powerup.numeffects = 4
+powerup.numeffects = 5
+
 powerup.0 = Instant On
+powerup.0.fieldnames.duration = Duration
+powerup.0.fieldnames.updateinterval = Not Used
+powerup.0.fieldnames.amplitude = Not Used
+powerup.0.fieldnames.specialparameter = Not Used
+powerup.0.fieldnames.frameindexstart = Frame Index Start
+powerup.0.fieldnames.frameindexend = Frame Index End
+powerup.0.fieldnames.size = Not Used
+powerup.0.fieldnames.color1 = Color
+powerup.0.fieldnames.color2 = Not Used
+powerup.0.fieldnames.color3 = Not Used
+
 powerup.1 = Fade
+powerup.1.fieldnames.duration = Duration
+powerup.1.fieldnames.updateinterval = Update Interval
+powerup.1.fieldnames.amplitude = Not Used
+powerup.1.fieldnames.specialparameter = Not Used
+powerup.1.fieldnames.frameindexstart = Frame Index Start
+powerup.1.fieldnames.frameindexend = Frame Index End
+powerup.1.fieldnames.size = Not Used
+powerup.1.fieldnames.color1 = Color 1
+powerup.1.fieldnames.color2 = Not Used
+powerup.1.fieldnames.color3 = Not Used
+
 powerup.2 = Scroll
+powerup.2.fieldnames.duration = Duration
+powerup.2.fieldnames.updateinterval = Update Interval
+powerup.2.fieldnames.amplitude = Not Used
+powerup.2.fieldnames.specialparameter = Not Used
+powerup.2.fieldnames.frameindexstart = Frame Index Start
+powerup.2.fieldnames.frameindexend = Frame Index End
+powerup.2.fieldnames.size = Not Used
+powerup.2.fieldnames.color1 = Color 1
+powerup.2.fieldnames.color2 = Not Used
+powerup.2.fieldnames.color3 = Not Used
+
 powerup.3 = Pulse Wave
+powerup.3.fieldnames.duration = Duration
+powerup.3.fieldnames.updateinterval = Update Interval
+powerup.3.fieldnames.amplitude = Not Used
+powerup.3.fieldnames.specialparameter = Pulse Speed
+powerup.3.fieldnames.frameindexstart = Frame Index Start
+powerup.3.fieldnames.frameindexend = Frame Index End
+powerup.3.fieldnames.size = Pulse Spacing
+powerup.3.fieldnames.color1 = Blade Color
+powerup.3.fieldnames.color2 = Pulse Color
+powerup.3.fieldnames.color3 = Not Used
 
-powerdown.numeffects = 4
+powerup.4 = Sine Wave
+powerup.4.fieldnames.duration = Not Used
+powerup.4.fieldnames.updateinterval = Update Interval
+powerup.4.fieldnames.amplitude = Amplitude
+powerup.4.fieldnames.specialparameter = Speed
+powerup.4.fieldnames.frameindexstart = Frame Index Start
+powerup.4.fieldnames.frameindexend = Frame Index End
+powerup.4.fieldnames.size = Not Used
+powerup.4.fieldnames.color1 = Blade Color
+powerup.4.fieldnames.color2 = Not Used
+powerup.4.fieldnames.color3 = Not Used
+
+powerdown.numeffects = 5
+
 powerdown.0 = Instant Off
-powerdown.1 = Fade
-powerdown.2 = Scroll
-powerdown.3 = Pulse Wave
+powerdown.0.fieldnames.duration = Duration
+powerdown.0.fieldnames.updateinterval = Not Used
+powerdown.0.fieldnames.amplitude = Not Used
+powerdown.0.fieldnames.specialparameter = Not Used
+powerdown.0.fieldnames.frameindexstart = Frame Index Start
+powerdown.0.fieldnames.frameindexend = Frame Index End
+powerdown.0.fieldnames.size = Not Used
+powerdown.0.fieldnames.color1 = Color 1
+powerdown.0.fieldnames.color2 = Not Used
+powerdown.0.fieldnames.color3 = Not Used
 
-flicker.numeffects = 7
+powerdown.1 = Fade
+powerdown.1.fieldnames.duration = Duration
+powerdown.1.fieldnames.updateinterval = Update Interval
+powerdown.1.fieldnames.amplitude = Not Used
+powerdown.1.fieldnames.specialparameter = Not Used
+powerdown.1.fieldnames.frameindexstart = Frame Index Start
+powerdown.1.fieldnames.frameindexend = Frame Index End
+powerdown.1.fieldnames.size = Not Used
+powerdown.1.fieldnames.color1 = Color 1
+powerdown.1.fieldnames.color2 = Not Used
+powerdown.1.fieldnames.color3 = Not Used
+
+powerdown.2 = Scroll
+powerdown.2.fieldnames.duration = Duration
+powerdown.2.fieldnames.updateinterval = Update Interval
+powerdown.2.fieldnames.amplitude = Not Used
+powerdown.2.fieldnames.specialparameter = Not Used
+powerdown.2.fieldnames.frameindexstart = Frame Index Start
+powerdown.2.fieldnames.frameindexend = Frame Index End
+powerdown.2.fieldnames.size = Not Used
+powerdown.2.fieldnames.color1 = Color 1
+powerdown.2.fieldnames.color2 = Not Used
+powerdown.2.fieldnames.color3 = Not Used
+
+powerdown.3 = Pulse Wave
+powerdown.3.fieldnames.duration = Duration
+powerdown.3.fieldnames.updateinterval = Update Interval
+powerdown.3.fieldnames.amplitude = Not Used
+powerdown.3.fieldnames.specialparameter = Pulse Speed
+powerdown.3.fieldnames.frameindexstart = Frame Index Start
+powerdown.3.fieldnames.frameindexend = Frame Index End
+powerdown.3.fieldnames.size = Not Used
+powerdown.3.fieldnames.color1 = Blade Color
+powerdown.3.fieldnames.color2 = Pulse Color
+powerdown.3.fieldnames.color3 = Not Used
+
+powerdown.4 = Sine Wave
+powerdown.4.fieldnames.duration = Not Used
+powerdown.4.fieldnames.updateinterval = Update Interval
+powerdown.4.fieldnames.amplitude = Amplitude
+powerdown.4.fieldnames.specialparameter = Speed
+powerdown.4.fieldnames.frameindexstart = Frame Index Start
+powerdown.4.fieldnames.frameindexend = Frame Index End
+powerdown.4.fieldnames.size = Not Used
+powerdown.4.fieldnames.color1 = Blade Color
+powerdown.4.fieldnames.color2 = Not Used
+powerdown.4.fieldnames.color3 = Not Used
+
+flicker.numeffects = 9
+
 flicker.0 = Solid
+flicker.0.fieldnames.duration = Not Used
+flicker.0.fieldnames.updateinterval = Not Used
+flicker.0.fieldnames.amplitude = Not Used
+flicker.0.fieldnames.specialparameter = Not Used
+flicker.0.fieldnames.frameindexstart = Frame Index Start
+flicker.0.fieldnames.frameindexend = Frame Index End
+flicker.0.fieldnames.size = Not Used
+flicker.0.fieldnames.color1 = Color 1
+flicker.0.fieldnames.color2 = Not Used
+flicker.0.fieldnames.color3 = Not Used
+
 flicker.1 = Random Shimmer
+flicker.1.fieldnames.duration = Not Used
+flicker.1.fieldnames.updateinterval = Update Interval
+flicker.1.fieldnames.amplitude = Amplitude
+flicker.1.fieldnames.specialparameter = Not Used
+flicker.1.fieldnames.frameindexstart = Frame Index Start
+flicker.1.fieldnames.frameindexend = Frame Index End
+flicker.1.fieldnames.size = Not Used
+flicker.1.fieldnames.color1 = Color 1
+flicker.1.fieldnames.color2 = Not Used
+flicker.1.fieldnames.color3 = Not Used
+
 flicker.2 = Random Color Swap
+flicker.2.fieldnames.duration = Not Used
+flicker.2.fieldnames.updateinterval = Update Interval
+flicker.2.fieldnames.amplitude = Not Used
+flicker.2.fieldnames.specialparameter = Probability
+flicker.2.fieldnames.frameindexstart = Frame Index Start
+flicker.2.fieldnames.frameindexend = Frame Index End
+flicker.2.fieldnames.size = Not Used
+flicker.2.fieldnames.color1 = Color 1
+flicker.2.fieldnames.color2 = Color 2
+flicker.2.fieldnames.color3 = Not Used
+
 flicker.3 = Audio Flicker
+flicker.3.fieldnames.duration = Duration
+flicker.3.fieldnames.updateinterval = Update Interval
+flicker.3.fieldnames.amplitude = Amplitude
+flicker.3.fieldnames.specialparameter = Special Parameter
+flicker.3.fieldnames.frameindexstart = Frame Index Start
+flicker.3.fieldnames.frameindexend = Frame Index End
+flicker.3.fieldnames.size = Size
+flicker.3.fieldnames.color1 = Color 1
+flicker.3.fieldnames.color2 = Color 2
+flicker.3.fieldnames.color3 = Color 3
+
 flicker.4 = Plasma Flare
+flicker.4.fieldnames.duration = Duration
+flicker.4.fieldnames.updateinterval = Update Interval
+flicker.4.fieldnames.amplitude = Amplitude
+flicker.4.fieldnames.specialparameter = Special Parameter
+flicker.4.fieldnames.frameindexstart = Frame Index Start
+flicker.4.fieldnames.frameindexend = Frame Index End
+flicker.4.fieldnames.size = Size
+flicker.4.fieldnames.color1 = Color 1
+flicker.4.fieldnames.color2 = Color 2
+flicker.4.fieldnames.color3 = Color 3
+
 flicker.5 = Flame
+flicker.5.fieldnames.duration = Duration
+flicker.5.fieldnames.updateinterval = Update Interval
+flicker.5.fieldnames.amplitude = Amplitude
+flicker.5.fieldnames.specialparameter = Special Parameter
+flicker.5.fieldnames.frameindexstart = Frame Index Start
+flicker.5.fieldnames.frameindexend = Frame Index End
+flicker.5.fieldnames.size = Size
+flicker.5.fieldnames.color1 = Color 1
+flicker.5.fieldnames.color2 = Color 2
+flicker.5.fieldnames.color3 = Color 3
+
 flicker.6 = Pulse Wave
+flicker.6.fieldnames.duration = Not Used
+flicker.6.fieldnames.updateinterval = Update Interval
+flicker.6.fieldnames.amplitude = Not Used
+flicker.6.fieldnames.specialparameter = Pulse Speed
+flicker.6.fieldnames.frameindexstart = Frame Index Start
+flicker.6.fieldnames.frameindexend = Frame Index End
+flicker.6.fieldnames.size = Pulse Spacing
+flicker.6.fieldnames.color1 = Blade Color
+flicker.6.fieldnames.color2 = Pulse Color
+flicker.6.fieldnames.color3 = Not Used
+
+flicker.7 = Sine Fade
+flicker.7.fieldnames.duration = Not Used
+flicker.7.fieldnames.updateinterval = Update Interval
+flicker.7.fieldnames.amplitude = Amplitude
+flicker.7.fieldnames.specialparameter = Speed
+flicker.7.fieldnames.frameindexstart = Frame Index Start
+flicker.7.fieldnames.frameindexend = Frame Index End
+flicker.7.fieldnames.size = Not Used
+flicker.7.fieldnames.color1 = Blade Color
+flicker.7.fieldnames.color2 = Not Used
+flicker.7.fieldnames.color3 = Not Used
+
+flicker.8 = Sine Wave
+flicker.8.fieldnames.duration = Not Used
+flicker.8.fieldnames.updateinterval = Update Interval
+flicker.8.fieldnames.amplitude = Amplitude
+flicker.8.fieldnames.specialparameter = Speed
+flicker.8.fieldnames.frameindexstart = Frame Index Start
+flicker.8.fieldnames.frameindexend = Frame Index End
+flicker.8.fieldnames.size = Not Used
+flicker.8.fieldnames.color1 = Blade Color
+flicker.8.fieldnames.color2 = Not Used
+flicker.8.fieldnames.color3 = Not Used
 
 blaster.numeffects = 2
+
 blaster.0 = Flash
+blaster.0.fieldnames.duration = Duration
+blaster.0.fieldnames.updateinterval = Not Used
+blaster.0.fieldnames.amplitude = Not Used
+blaster.0.fieldnames.specialparameter = Not Used
+blaster.0.fieldnames.frameindexstart = Frame Index Start
+blaster.0.fieldnames.frameindexend = Frame Index End
+blaster.0.fieldnames.size = Not Used
+blaster.0.fieldnames.color1 = Color 1
+blaster.0.fieldnames.color2 = Not Used
+blaster.0.fieldnames.color3 = Not Used
+
 blaster.1 = Local Flash
+blaster.1.fieldnames.duration = Duration
+blaster.1.fieldnames.updateinterval = Not Used
+blaster.1.fieldnames.amplitude = Not Used
+blaster.1.fieldnames.specialparameter = Do Fade
+blaster.1.fieldnames.frameindexstart = Frame Index Start
+blaster.1.fieldnames.frameindexend = Frame Index End
+blaster.1.fieldnames.size = Not Used
+blaster.1.fieldnames.color1 = Color 1
+blaster.1.fieldnames.color2 = Not Used
+blaster.1.fieldnames.color3 = Not Used
 
 clash.numeffects = 2
+
 clash.0 = Solid
+clash.0.fieldnames.duration = Duration
+clash.0.fieldnames.updateinterval = Not Used
+clash.0.fieldnames.amplitude = Not Used
+clash.0.fieldnames.specialparameter = Not Used
+clash.0.fieldnames.frameindexstart = Frame Index Start
+clash.0.fieldnames.frameindexend = Frame Index End
+clash.0.fieldnames.size = Not Used
+clash.0.fieldnames.color1 = Color 1
+clash.0.fieldnames.color2 = Not Used
+clash.0.fieldnames.color3 = Not Used
+
 clash.1 = Flash
+clash.1.fieldnames.duration = Duration
+clash.1.fieldnames.updateinterval = Not Used
+clash.1.fieldnames.amplitude = Not Used
+clash.1.fieldnames.specialparameter = Not Used
+clash.1.fieldnames.frameindexstart = Frame Index Start
+clash.1.fieldnames.frameindexend = Frame Index End
+clash.1.fieldnames.size = Not Used
+clash.1.fieldnames.color1 = Color 1
+clash.1.fieldnames.color2 = Not Used
+clash.1.fieldnames.color3 = Not Used
 
 lockup.numeffects = 3
-lockup.0 = Solid
-lockup.1 = Random Color Swap
-lockup.2 = Focus Lock
 
+lockup.0 = Solid
+lockup.0.fieldnames.duration = Not Used
+lockup.0.fieldnames.updateinterval = Not Used
+lockup.0.fieldnames.amplitude = Not Used
+lockup.0.fieldnames.specialparameter = Not Used
+lockup.0.fieldnames.frameindexstart = Frame Index Start
+lockup.0.fieldnames.frameindexend = Frame Index End
+lockup.0.fieldnames.size = Not Used
+lockup.0.fieldnames.color1 = Color 1
+lockup.0.fieldnames.color2 = Not Used
+lockup.0.fieldnames.color3 = Not Used
+
+lockup.1 = Random Color Swap
+lockup.1.fieldnames.duration = Not Used
+lockup.1.fieldnames.updateinterval = Update Interval
+lockup.1.fieldnames.amplitude = Not Used
+lockup.1.fieldnames.specialparameter = Probability
+lockup.1.fieldnames.frameindexstart = Frame Index Start
+lockup.1.fieldnames.frameindexend = Frame Index End
+lockup.1.fieldnames.size = Not Used
+lockup.1.fieldnames.color1 = Color 1
+lockup.1.fieldnames.color2 = Color 2
+lockup.1.fieldnames.color3 = Not Used
+
+lockup.2 = Focus Lock
+lockup.2.fieldnames.duration = Duration
+lockup.2.fieldnames.updateinterval = Update Interval
+lockup.2.fieldnames.amplitude = Amplitude
+lockup.2.fieldnames.specialparameter = Special Parameter
+lockup.2.fieldnames.frameindexstart = Frame Index Start
+lockup.2.fieldnames.frameindexend = Frame Index End
+lockup.2.fieldnames.size = Size
+lockup.2.fieldnames.color1 = Color 1
+lockup.2.fieldnames.color2 = Color 2
+lockup.2.fieldnames.color3 = Color 3
